# LinkedList

./: .gitignore  CMakeLists.txt  README.md  package.json
src/: main.cpp
src/lib/: function.cpp  function.h
src/lib/LinkedList/: LinkedList.cpp  LinkedList.h
src/lib/LinkedList/Node/: Node.cpp  Node.h
src/lib/Node/: Node.cpp  Node.h
test/: LinkedList.test.cpp  LinkedList_test.cpp
